--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
 body {
 	margin: 20px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-		"Droid Sans", "Helvetica Neue", sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -14,6 +15,15 @@ table {
 	margin-bottom: 10px;
 }
 
+.game {
+	display: flex;
+
+	& > div {
+		margin: 2em;
+		// border: 1px solid;
+	}
+}
+
 .board {
 	display: inline-block;
 	flex-direction: column;
@@ -23,16 +33,26 @@ table {
 	.board-top {
 		.lane {
 			justify-content: flex-start;
-			&:nth-child(even) {
+			&:nth-child(1),
+			&:nth-child(3),
+			&:nth-child(5),
+			&:nth-child(8),
+			&:nth-child(10),
+			&:nth-child(12) {
 				&:before {
-					border-top: 230px solid #5e81ac;
+					border-top: 230px solid lighten(#5e81ac, 10%);
 					border-right: 25px solid transparent;
 					border-left: 25px solid transparent;
 				}
 			}
-			&:nth-child(odd) {
+			&:nth-child(2),
+			&:nth-child(4),
+			&:nth-child(6),
+			&:nth-child(9),
+			&:nth-child(11),
+			&:nth-child(13) {
 				&:before {
-					border-top: 230px solid #bf616a;
+					border-top: 230px solid lighten(#bf616a, 10%);
 					border-right: 25px solid transparent;
 					border-left: 25px solid transparent;
 				}
@@ -58,18 +78,28 @@ table {
 	.board-bottom {
 		.lane {
 			justify-content: flex-end;
-			&:nth-child(even) {
+			&:nth-child(1),
+			&:nth-child(3),
+			&:nth-child(5),
+			&:nth-child(8),
+			&:nth-child(10),
+			&:nth-child(12) {
 				&:before {
 					border-top: 50px solid transparent;
-					border-bottom: 230px solid #bf616a;
+					border-bottom: 230px solid lighten(#bf616a, 10%);
 					border-right: 25px solid transparent;
 					border-left: 25px solid transparent;
 				}
 			}
-			&:nth-child(odd) {
+			&:nth-child(2),
+			&:nth-child(4),
+			&:nth-child(6),
+			&:nth-child(9),
+			&:nth-child(11),
+			&:nth-child(13) {
 				&:before {
 					border-top: 50px solid transparent;
-					border-bottom: 230px solid #5e81ac;
+					border-bottom: 230px solid lighten(#5e81ac, 10%);
 					border-right: 25px solid transparent;
 					border-left: 25px solid transparent;
 				}
